// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EnvironmentBanner development render 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="EnvironmentBanner-root EnvironmentBanner-rootDevelopment"
    >
      <div
        class="EnvironmentBanner-label EnvironmentBanner-labelDevelopment"
      >
        Picasso development
      </div>
    </div>
  </div>
</div>
`;

exports[`EnvironmentBanner production render 1`] = `
<div>
  <div
    class="Picasso-root"
  />
</div>
`;
